# lmdeploy

./: CMakeLists.txt  generate.sh
lmdeploy/turbomind/deploy/: converter.py
lmdeploy/turbomind/deploy/source_model/: __init__.py  llama_w4afp8.py
lmdeploy/turbomind/deploy/target_model/: __init__.py  w4afp8.py
src/turbomind/kernels/: CMakeLists.txt  quant_kernels.cu  quant_kernels.h
src/turbomind/kernels/gemm_s_f8/: CMakeLists.txt  gemm_s4_f8.cc  gemm_s4_f8.h
src/turbomind/models/llama/: CMakeLists.txt  LlamaBatch.cc  LlamaBatch.h  LlamaDecoderLayerWeight.cc  LlamaDenseWeight.h  LlamaFfnLayer.cc  LlamaFfnLayer.h  LlamaLinear.h  LlamaV2.cc  LlamaV2.h  llama_decoder_kernels.cu  llama_decoder_kernels.h  llama_kernels.cu  llama_utils.h  unified_attention_layer.cc  unified_attention_layer.h  unified_decoder.cc  unified_decoder.h
src/turbomind/triton_backend/llama/: LlamaTritonModel.cc
src/turbomind/utils/: CMakeLists.txt  cuda_fp8_utils.cu
